# hianime-api

./: .env  .env.example  .gitignore  Cargo.toml  readme.md
src/: main.rs  routes.rs
src/config/: default_env.rs  mod.rs
src/controllers/: anime_episode_servers.rs  anime_episodes.rs  error.rs  home_page.rs  mod.rs
src/parsers/: anime_episode_servers.rs  anime_episodes.rs  home_page.rs  mod.rs
src/types/: anime.rs  errors.rs  mod.rs
src/types/parsers/: anime_episode_servers.rs  anime_episodes.rs  home_page.rs  mod.rs
src/utils/: anime.rs  env.rs  mod.rs
